--- a/index.html
+++ b/index.html
@@ -10,3 +10,8 @@
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/normalize.css">
     </head>
+
+    <body>
+        
+        <h1>Imi</h1>
+    </body>
